fixed spacing issue again

--- a/scss/pages/specialty-pages/_about-uva-library.scss
+++ b/scss/pages/specialty-pages/_about-uva-library.scss
@@ -73,7 +73,7 @@
     }
 
     > div {
-      width: 12rem;
+      width: 10rem;
       height: 9rem;
     }
 
